--- a/index.html
+++ b/index.html
@@ -1,12 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cb37fb0c76.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/influencer.css">
 </head>
-<body>
-    
+
+<body class="bg-light">
+    <header class="header">
+        <nav class="navbar">
+            <h3 class="brand text-gray">Influencer products</h3>
+            <ul class="nav-links">
+                <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Products</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Sign up</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Log in</a></li>
+                <i class="fa-solid fa-magnifying-glass nav-item"></i>
+                <i class="fa-solid fa-cart-shopping nav-item"></i>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title text-gray">Start your Journey as
+                    Influencer</h1>
+                <p class="banner-description text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+                    vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn-primary">Prebook Now →</button>
+            </div>
+            <img class="banner-image" src="images/main-camera.png" alt="">
+        </div>
+    </header>
+    <main>
+        <section class="our-sponsors">
+            <div class="sponsor-comapies">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+            </div>
+        </section>
+        <!-- cards -->
+        <section class="some-facts">
+            <h3 class="section-title text-gray">Popular Collection</h3>
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/tripod.png" alt="" class="fact-icon">
+                        <h3 class="fact-title">Flex Tripod</h3>
+                        <h4 class="fact-number">$50.48</h4>
+                        <div class="rating">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                            <span class="rating-value">4.99</span>
+                        </div>
+                        <h5 class="fact-name">Worldwide Shifting<br>available<br>Buyers protection possible!</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/mic.png" alt="" class="fact-icon">
+                        <h3 class="fact-title">Microphone</h3>
+                        <h4 class="fact-number">$50.48</h4>
+                        <div class="rating">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                            <span class="rating-value">4.99</span>
+                        </div>
+                        <h5 class="fact-name">Worldwide Shifting<br>available<br>Buyers protection possible!</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/airpod.png" alt="" class="fact-icon">
+                        <h3 class="fact-title">Airbuds</h3>
+                        <h4 class="fact-number">$50.48</h4>
+                        <div class="rating">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                            <span class="rating-value">4.99</span>
+                        </div>
+                        <h5 class="fact-name">Worldwide Shifting<br>available<br>Buyers protection possible!</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/drone.png" alt="" class="fact-icon">
+                        <h3 class="fact-title">Drone</h3>
+                        <h4 class="fact-number">$50.48</h4>
+                        <div class="rating">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                            <span class="rating-value">4.99</span>
+                        </div>
+                        <h5 class="fact-name">Worldwide Shifting<br>available<br>Buyers protection possible!</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/lights.png" alt="" class="fact-icon">
+                        <h3 class="fact-title">Light Setup</h3>
+                        <h4 class="fact-number">$50.48</h4>
+                        <div class="rating">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                            <span class="rating-value">4.99</span>
+                        </div>
+                        <h5 class="fact-name">Worldwide Shifting<br>available<br>Buyers protection possible!</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/setup.png" alt="" class="fact-icon">
+                        <h3 class="fact-title">photoshoot set</h3>
+                        <h4 class="fact-number">$50.48</h4>
+                        <div class="rating">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                            <span class="rating-value">4.99</span>
+                        </div>
+                        <h5 class="fact-name">Worldwide Shifting<br>available<br>Buyers protection possible!</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/camera.png" alt="" class="fact-icon">
+                        <h3 class="fact-title">Vlogging Camera</h3>
+                        <h4 class="fact-number">$50.48</h4>
+                        <div class="rating">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                            <span class="rating-value">4.99</span>
+                        </div>
+                        <h5 class="fact-name">Worldwide Shifting<br>available<br>Buyers protection possible!</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/single-light.png" alt="" class="fact-icon">
+                        <h3 class="fact-title">Green Screen</h3>
+                        <h4 class="fact-number">$50.48</h4>
+                        <div class="rating">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                            <span class="rating-value">4.99</span>
+                        </div>
+                        <h5 class="fact-name">Worldwide Shifting<br>available<br>Buyers protection possible!</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/action.png" alt="" class="fact-icon">
+                        <h3 class="fact-title">Action Camera</h3>
+                        <h4 class="fact-number">$50.48</h4>
+                        <div class="rating">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                            <span class="rating-value">4.99</span>
+                        </div>
+                        <h5 class="fact-name">Worldwide Shifting<br>available<br>Buyers protection possible!</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="btn-sec">See More →</div>
+        </section>
+        <!-- featured -->
+        <section class="featured">
+            <div>
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="feature-info">
+                <h3 class="feature-title">Featured products at one place</h3>
+                <p class="feature-ds text-gray">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn-primary">Join now →</button>
+            </div>
+        </section>
+    </main>
+    <footer class="bg-color">
+        <div class="footer-container">
+            <div class="footer-info">
+                <h3 class="f-title">Influencer products</h3>
+                <p class="copyright">Copyright © 2020  influencer products</p>
+                <p class="copyright">All rights reserved</p>
+            </div>
+            <div class="footer-icons">
+                <i class="fa-brands fa-square-instagram footer-icon"></i>
+                <i class="fa-brands fa-twitter footer-icon"></i>
+                <i class="fa-brands fa-square-dribbble footer-icon"></i>
+                <i class="fa-brands fa-youtube footer-icon"></i>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
